ilivalidator 1.14.8 (2025-07-xx)
--------------------------------
- Validator: ILI2.3 fix validation of a repeated attribute (#446)
- iox-ili-1.24.1+


ilivalidator 1.14.7 (2025-05-07)
--------------------------------
- Validator: ILI2.4 fix the outer and inner edges must not be coded as a single line (#442)
- Validator: Falsch codierte Donut-Polygone werden nicht erkannt (#429)
- new option --simpleBoundary to allow only simple lines as polygon boundary lines (#331)
- iox-ili-1.24.0
- ili2c-5.6.4

ilivalidator 1.14.6 (2025-04-08)
--------------------------------
- fix missing index in error log for list/bag of simple types (#440)
- fix object path evaluation with mixed case INTERLIS.UUIDOID (#416)
- fix IllegalArgumentException with plausibility constraint (#441)
- fix wrong object reported in set constraint error (#438)
- iox-ili-1.23.5

ilivalidator 1.14.5 (2025-01-14)
--------------------------------
- Xtf23Reader: fix xml whitespace/comment reading in alias table (#431)
- Xtf32Reader: fix missing object linenumber (#432)
- Validator: ILI2.4 fix reference attributes at class level not evaluated (#434)
- Validator: Inherited association is not evaluated (#422)
- iox-ili-1.23.4
- ili2c-5.6.3

ilivalidator 1.14.4 (2024-12-04)
--------------------------------
- fix INTERLIS.elementCount(undefined attribute) (#430)
- Xtf23: use Xtf23Reader by default
- ili2c-5.6.2
- iox-ili-1.23.3

ilivalidator 1.14.3 (2024-08-16)
--------------------------------
- Validate VIEW in non-validation models (#324)
- XTF: AREA Refactoring (#384)
- XTF: accept valid AREA overlaps (#366) 
- support DMAVTYM_Topologie_V1_0 covers function
- support where conditions (selections) in projection views (#408)
- iox-ili-1.23.1
- ili2c-5.5.4

ilivalidator 1.14.2 (2024-06-19)
--------------------------------
- iox-ili-1.23.0
- ili2c-5.5.3

ilivalidator 1.14.1 (2023-12-29)
--------------------------------
- implement Math_V2, Text_V2 (#375)